# obs-plugintemplate

./: CMakeLists.txt  LICENSE  README.md  buildspec.json
data/effects/: beautycore_ai.effect
data/locale/: en-US.ini
src/: beautycore-filter.cpp  beautycore-filter.hpp  plugin-main.cpp  presets.cpp  presets.hpp
src/ai/: ai-engine.cpp  ai-engine.hpp  face-parser.cpp  face-parser.hpp  image.cpp  image.hpp  mask-stabilizer.cpp  mask-stabilizer.hpp  ort-session.cpp  ort-session.hpp  yunet.cpp  yunet.hpp
